# kindle-dashboard

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
cpp/: dither.cpp
kindle_dashboard/: app.py
recipe/: bld.bat  build.sh  meta.yaml
