[build-system]
requires = ["setuptools>=68", "wheel", "cmake>=3.20", "ninja", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "kindle-dashboard-renderer"
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "httpx",
    "pillow",
    "uvicorn",
]

[project.scripts]
kindle-dashboard = "kindle_dashboard.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kindle_dashboard*"]

[tool.setuptools.package-data]
kindle_dashboard = ["fonts/*.ttf"]
